src/test/deca/context/valid/return/return_float_arithmetic.deca
// Description :
// Retour d’une expression arithmétique float
//
// Resultats :
// ok

class B {
    float f() {
        float x = 2.5;
        float y = 1.5;
        return x / y + 1.0;
    }
}
