src/test/deca/context/invalid/return/return_void_in_int_expr_custom.deca
// Description :
// return d’une expression qui contient un void
//
// Resultats :
// Erreur contextuelle
// Ligne 8 : type void invalide

class K {
    void g() {}
    int f() {
        int x = 1;
        return x + g(); // invalide
    }
}
